--- a/descriptor.ipynb
+++ b/descriptor.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Pythonディスクリプタの理解と応用\n",
     "\n",
-    "Pythonのディスクリプタは、言語仕様(Python2.7では 3.4.2.2, 3.4.2.3)で説明されているように、通常の属性値検索を迂回する特殊な機能をもたらす。さらに、この“属性値検索の迂回”に加えて、“属性値の取得”の際にディスクリプタのメソッドが呼び出されるという動的な性質から、計算型の属性値の実現に用いられている。本報告書では、Pythonの2つの特徴(機能)について、自前でのその機能のサブセットをユーザ定義ディスクリプタとして実装するこで、ディスクリプタへの理解を深め、さらに Python 言語にはない、関数のオーバロードを実装することで、ディスクリプタのもつ機動性の高さに触れる。\n",
+    "Pythonのディスクリプタは、言語仕様(Python2.7では 3.4.2.2, 3.4.2.3)で説明されているように、通常の属性値検索を迂回する特殊な機能をもたらす。さらに、この“属性値検索の迂回”に加えて、“属性値の取得”の際にディスクリプタのメソッドが呼び出されるという動的な性質から、計算型の属性値の実現に用いられている。本文書では、Pythonの2つの特徴(機能)について、自前でのその機能のサブセットをユーザ定義ディスクリプタとして実装するこで、ディスクリプタへの理解を深め、さらに Python 言語にはない、関数のオーバロードを実装することで、ディスクリプタのもつ機動性の高さに触れる。\n",
     "\n",
     "なお、この文書では Python 2.7 を想定する。Python 3.x ではディスクリプタのAPIが若干異なるが基本思想は変わらない。"
    ]
